Update petition progress bar and data fetching

--- a/index.html
+++ b/index.html
@@ -853,7 +853,20 @@
             </div>
         </section>
 
-        <!-- Petition Section -->
+       <!-- Petition Section -->
+        <div style="width:100%;max-width:600px;margin:30px auto;">
+  <h3 style="text-align:center;color:#00d4ff;margin-bottom:15px;">Progression de la pétition</h3>
+  <div style="background:linear-gradient(135deg, #050811 0%, #0a0e27 100%);width:100%;height:50px;border-radius:16px;overflow:hidden;border:2px solid #0099cc;box-shadow:0 0 20px rgba(0,212,255,0.3);">
+    <div id="progressBar" style="background: linear-gradient(90deg, #00d4ff, #ff6b35);height:100%; width:0%; transition: width 0.8s ease;box-shadow: 0 0 20px #00d4ff, inset 0 0 10px rgba(255,255,255,0.1);"></div>
+  </div>
+  <div style="color:#00d4ff;margin-top:15px;font-size:18px;font-weight:bold;text-align:center;">
+    <span id="currentCount">0</span> / <span id="targetCount">150</span> signatures
+  </div>
+  <div style="color:#888;margin-top:8px;text-align:center;font-size:14px;">
+    <span id="percentDisplay">0</span>% complété
+  </div>
+</div>
+
      <section class="petition-section" id="petition">
     <h2 class="section-title">Signez la Pétition</h2>
     <div class="form-container">
@@ -1074,35 +1087,32 @@ function scrollToSection(sectionId) {
     }
 }
 </script>
-
-</script>
 <script>
-const url = "https://docs.google.com/spreadsheets/d/e/2PACX-1vQYjBpusnproFhBfrjgY8RrEsI2nbuf7-nhaONUkoG0yVYmeQRssaNn4hO681JZ82CKV-kzPU2FlgQl/gviz/tq?tqx=out:json";
+const url = "https://docs.google.com/spreadsheets/d/e/2PACX-1vQYjBpusnproFhBfrjgY8RrEsI2nbuf7-nhaONUkoG0yVYmeQRssaNn4hO681JZ82CKV-kzPU2FlgQl/pub?output=csv";
 const target = 150;
 
-fetch(url)
-  .then(response => response.text())
-  .then(data => {
-    const json = JSON.parse(data.substr(47).slice(0, -2));
-    // Certains Google Forms n'ont **pas** d'entête (selon config) : ajuste la ligne ci-dessous si besoin !
-    // Normalement, la première ligne = entête, donc on fait -1 (car la première ligne n'est PAS une réponse)
-    let count = json.table.rows.length - 1;
-    // Parfois, si jamais pas d'entête à exclure : commente la ligne du dessus et dé-commente celle-ci :
-    // let count = json.table.rows.length;
+function updateProgressBar() {
+  fetch(url)
+    .then(response => response.text())
+    .then(csvData => {
+      const lines = csvData.trim().split('\n');
+      const count = Math.max(0, lines.length - 1);
 
-    count = Math.max(0, count);
+      document.getElementById('currentCount').textContent = count;
+      document.getElementById('targetCount').textContent = target;
 
-    document.getElementById('currentCount').textContent = count;
-    document.getElementById('targetCount').textContent = target;
+      const percent = Math.min((count / target) * 100, 100);
+      document.getElementById('progressBar').style.width = percent + '%';
+      document.getElementById('percentDisplay').textContent = Math.round(percent);
+    })
+    .catch(e => {
+      document.getElementById('currentCount').textContent = '?';
+      console.error('Erreur récupération Google Sheet CSV', e);
+    });
+}
 
-    const percent = Math.min((count / target) * 100, 100);
-    document.getElementById('progressBar').style.width = percent + '%';
-  })
-  .catch(e => {
-    document.getElementById('currentCount').textContent = '?';
-    document.getElementById('progressBar').style.width = '0';
-    console.error('Erreur récupération Google Sheet', e);
-  });
+updateProgressBar();
+setInterval(updateProgressBar, 10000);
 </script>
 
 </body>
